--- a/scss/_catalog-main.scss
+++ b/scss/_catalog-main.scss
@@ -187,7 +187,7 @@
           top: 0.2rem;
           right: 0;
           left: 0;
-
+z-index: 1;
           &::-webkit-slider-runnable-track {
             -webkit-appearance: none;
           }
@@ -265,7 +265,7 @@
           top: 0.2rem;
           right: 0;
           left: 0;
-
+z-index: 1;
           &::-webkit-slider-runnable-track {
             -webkit-appearance: none;
           }
